deploying-simple-elasticsearch-and-kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
  rules:
    - http:
        paths:
          - path: /elasticsearch
            pathType: Prefix
            backend:
              service:
                name: elasticsearch-service
                port:
                  number: 9200
          - path: /kibana
            pathType: Prifix
            backend:
              service:
                name: kibana-service
                port:
                  number: 5601
